--- a/MicroservicesAssignment3/Web.Gateway/Web.Gateway.csproj
+++ b/MicroservicesAssignment3/Web.Gateway/Web.Gateway.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="3.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
